# Intent-to-Auditable-Trust-Object

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cache.lean  Dockerfile  IATO_V7.lean  Makefile  README.md  Test.lean  alloy_iato_v7_02_dependencies.ipynb  alloy_iato_v7_03_scrubbing_obligations.ipynb  c_proof_sketch_iato_v7_01_contracts.ipynb  config.toml  coq_iato_v7_01_foundations.ipynb  coq_iato_v7_06_audit_log_authenticity.ipynb  deps_manifest.json  dispatcher.c  docker-compose.yml  docs.md  environment.yml  explainability.py  fast_mask.asm  jit_fracture.py  lakefile.lean  lakefile.toml  main.ipynb  mask_sve2.s  mask_v7_sve2.c  master_results.ipynb  osint_audit_log.c  pkcs11_signer.c  pkcs11_signer.h  prometheus.yml  pyproject.toml  tinycbor.c  tinycbor.h  tla_iato_v7_01_state_machine.ipynb  tla_iato_v7_02_transition_safety.ipynb  (+3 more)
IATO_V7/: IATO_V7.lean  Main.lean  lakefile.lean  podman-compose.yml
ci/: devcontainer.json
circuits/: recursive_osint_aggregator.circom
compat/: mbedtls_stub.c
config/: backend.py  bootstrap.py  defaults.yaml  generate_api_key.py  init_environment.py  init_environment.sh  key_generation_engine.py  logging.yaml  runtime.env  security.yaml
data/: legacy_workers.csv  reference.json
docker/: Docker  Dockerfile  Dockerfile.kernel  Makefile  README.md  check_integrity.sh  docker-compose.yml  entrypoint.sh  entrypoint.yaml  generate_certs.sh  php-apache.Dockerfile  prometheus.yml  setup_stack.sh
docs/: ARCHITECTURE.md  CODEX_ORCHESTRATOR.md  Environment-Tools.md  LEGACY_PURGE.md  README.md  ci-overview.md  (+19 more)
(+846 files in other folders)
