[project]
name = "iato-ops"
version = "0.1.0"
description = "Operational tooling for the IATO Docker and S3-backed Drupal stack"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "pyyaml>=6.0",
  "requests>=2.32"
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.conda-lock]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.conda-lock.dependencies]
python = "3.11"
pip = "*"

[tool.conda-lock.dependencies.pip]
iato-ops = {path = ".", editable = true}
