[project]
name = "iato-ops"
version = "0.1.0"
description = "Operational tooling for the IATO Docker and S3-backed Drupal stack"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "iam-security",
  "policy-analysis",
  "risk-scoring",
  "cloud-governance",
  "c-dispatcher"
]
dependencies = [
  "boto3>=1.34",
  "pyyaml>=6.0",
  "requests>=2.32",
  "policyuniverse>=1.5"
]


[project.optional-dependencies]
test = [
  "pytest==9.0.2"
]

[project.scripts]
iam-policy-parser = "iato_ops.iam_policy_parser:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iato_ops"]

[tool.conda-lock]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.conda-lock.dependencies]
python = "3.11"
[tool.conda-lock.dependencies.pip]
iato-ops = {path = ".", editable = true}
